--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://nsfisis.github.io"
+baseURL = "https://nsfisis.github.io"
 languageCode = "ja-JP"
 title = "5757777"
 theme = "paper"
