--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://nsfisis.github.io"
+baseURL = "https://blog.nsfisis.dev"
 languageCode = "ja-JP"
 title = "REPL: Rest-Eat-Program Loop"
 theme = "paper"
