--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://blog.nsfisis.dev"
 languageCode = "ja-JP"
 hasCJKLanguage = true
 title = "REPL: Rest-Eat-Program Loop"
-theme = "paper"
+theme = "mypaper"
 
 [taxonomies]
 tag = 'tags'
